Trabajo práctico - 2° etapa

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
       </ul>
     </nav>
   </header>
+
+  <div class="hero-container">
+    <section class="hero-section">
+      <div class="hero-content">
+        <h1>Tu Aventura Acuática Comienza Aquí</h1>
+        <p>Descubre el mejor equipamiento para natación y sumérgete en la calidad.</p>
+        <a href="pages/trajes.html" class="btn-hero">Explorar Colección</a>
+      </div>
+    </section>
+  </div>
+
   <main>
     <section>
       <h1>Bienvenido a AquaSwim</h1>
