--- a/pages/trajes.html
+++ b/pages/trajes.html
@@ -29,8 +29,26 @@
       <h1>Trajes de Baño</h1>
       <p>Explora nuestra colección de trajes de baño para hombres, mujeres y niños de las mejores marcas.</p>
       
-      <div class="cards">
-        <p>Próximamente: Trajes de competición, trajes de entrenamiento, bañadores y más...</p>
+      <div class="cards-container">
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/006962-100-04-f9fea724234346399f17320436767090-1024-1024.webp" alt="Traje de Competición Speed">
+          <div class="product-card-content">
+            <h3>Traje Competición Speed</h3>
+            <p class="description">Diseñado para la máxima velocidad y rendimiento en el agua. Tejido repelente al agua y ajuste de compresión.</p>
+            <p class="price">$75.000,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
+
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/006700-500-07-716f5b9eb069a1b73f17321199982131-640-0.webp" alt="Traje de Entrenamiento Endure">
+          <div class="product-card-content">
+            <h3>Traje Entrenamiento Endure</h3>
+            <p class="description">Durabilidad y comodidad para el entrenamiento diario. Resistente al cloro y de secado rápido.</p>
+            <p class="price">$45.990,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
       </div>
     </section>
   </main>
