--- a/pages/antiparras.html
+++ b/pages/antiparras.html
@@ -29,8 +29,26 @@
       <h1>Antiparras</h1>
       <p>Explora nuestra colección de antiparras para natación, diseñadas para ofrecer claridad, comodidad y protección.</p>
       
-      <div class="cards">
-        <p>Próximamente: Antiparras profesionales, antiparras para niños, antiparras con protección UV y más...</p>
+      <div class="cards-container">
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/001430-545-01-c64e3271590d0f864b17431093325411-1024-1024.webp" alt="Antiparra Profesional Modelo X">
+          <div class="product-card-content">
+            <h3>Antiparra Profesional X</h3>
+            <p class="description">Visión clara y sin fugas para el nadador competitivo. Lentes anti-empañantes y con protección UV.</p>
+            <p class="price">$25.990,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
+
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/002756-107-01-7e88f31aacde469bb517404440723447-1024-1024.webp" alt="Antiparra Junior Modelo Y">
+          <div class="product-card-content">
+            <h3>Antiparra Junior Y</h3>
+            <p class="description">Ajuste cómodo y divertido para los pequeños nadadores. Colores brillantes y material resistente.</p>
+            <p class="price">$15.500,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
       </div>
     </section>
   </main>
