--- a/pages/gorras.html
+++ b/pages/gorras.html
@@ -29,8 +29,26 @@
       <h1>Gorras</h1>
       <p>Explora nuestra colección de gorras de natación, diseñadas para reducir la resistencia al agua y mantener tu cabello protegido.</p>
       
-      <div class="cards">
-        <p>Próximamente: Gorras de silicona, gorras de competición, gorras térmicas, gorras con diseños exclusivos y más...</p>
+      <div class="cards-container">
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/1e774-239-poolish-moulded-001-fl-s-9f2da664-8d89b453628bd91e2f17416409415223-1024-1024.webp" alt="Gorra de Silicona Pro">
+          <div class="product-card-content">
+            <h3>Gorra de Silicona Pro</h3>
+            <p class="description">Ajuste hidrodinámico y cómodo, ideal para entrenamiento y competición. Reduce la resistencia.</p>
+            <p class="price">$12.990,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
+
+        <article class="product-card">
+          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/002467500-011-cf624d4f121af08ff316594680746554-1024-1024.webp" alt="Gorra de Lycra Confort">
+          <div class="product-card-content">
+            <h3>Gorra de Lycra Confort</h3>
+            <p class="description">Material suave y elástico para un ajuste confortable durante largas sesiones de natación.</p>
+            <p class="price">$9.500,00</p>
+          </div>
+          <a href="#" class="btn-card">Ver Detalles</a>
+        </article>
       </div>
     </section>
   </main>
