--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">
-        <img class="logo" src="assets/AquaSwim.png" width="200px" alt="logo">
-      </a>
-      <ul>
-        <li><a href="pages/trajes.html">Trajes de Baño</a></li>
-        <li><a href="pages/antiparras.html">Antiparras</a></li>
-        <li><a href="pages/gorras.html">Gorras</a></li>
-        <li><a href="pages/login.html">Iniciar Sesión</a></li>
-        <li><button class="endSession" title="Cerrar Sesión"><img src="assets/EndSession.svg" alt="Cerrar Sesión" width="20px"></button></li>
-      </ul>
+      <!-- Barra de navegación dinámica -->
     </nav>
   </header>
 
@@ -40,5 +31,8 @@
       <p>En nuestra tienda encontrarás todo lo que necesitas para disfrutar de la natación: trajes de baño, antiparras y gorras de la mejor calidad.</p>
     </section>
   </main>
+  <script src="js/site-structure.js"></script>
+  <script src="js/navbar-component.js"></script>
+  <script src="js/logoutRoot.js"></script>
 </body>
 </html>
