--- a/pages/trajes.html
+++ b/pages/trajes.html
@@ -12,16 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="../index.html">
-        <img class="logo" src="../assets/AquaSwim.png" width="200px" alt="logo">
-      </a>
-      <ul>
-        <li><a href="trajes.html">Trajes de Baño</a></li>
-        <li><a href="antiparras.html">Antiparras</a></li>
-        <li><a href="gorras.html">Gorras</a></li>
-        <li><a href="login.html">Iniciar Sesión</a></li>
-        <li><button class="endSession" title="Cerrar Sesión"><img src="../assets/EndSession.svg" alt="Cerrar Sesión" width="20px"></button></li>
-      </ul>
+      <!-- Barra de navegación dinámica -->
     </nav>
   </header>
   <main>
@@ -30,27 +21,15 @@
       <p>Explora nuestra colección de trajes de baño para hombres, mujeres y niños de las mejores marcas.</p>
       
       <div class="cards-container">
-        <article class="product-card">
-          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/006962-100-04-f9fea724234346399f17320436767090-1024-1024.webp" alt="Traje de Competición Speed">
-          <div class="product-card-content">
-            <h3>Traje Competición Speed</h3>
-            <p class="description">Diseñado para la máxima velocidad y rendimiento en el agua. Tejido repelente al agua y ajuste de compresión.</p>
-            <p class="price">$75.000,00</p>
-          </div>
-          <a href="#" class="btn-card">Ver Detalles</a>
-        </article>
-
-        <article class="product-card">
-          <img src="https://acdn-us.mitiendanube.com/stores/001/742/412/products/006700-500-07-716f5b9eb069a1b73f17321199982131-640-0.webp" alt="Traje de Entrenamiento Endure">
-          <div class="product-card-content">
-            <h3>Traje Entrenamiento Endure</h3>
-            <p class="description">Durabilidad y comodidad para el entrenamiento diario. Resistente al cloro y de secado rápido.</p>
-            <p class="price">$45.990,00</p>
-          </div>
-          <a href="#" class="btn-card">Ver Detalles</a>
-        </article>
+        <!-- Tarjetas de productos dinámicas -->
       </div>
     </section>
   </main>
+  <script src="../js/site-structure.js"></script>
+  <script src="../js/navbar-component.js"></script>
+  <script src="js/logout.js"></script>
+  <script src="../js/product-data.js"></script>
+  <script src="../js/dynamic-product-loader.js"></script>
+  <script src="../js/product-card-interaction.js"></script>
 </body>
 </html> 
