Trabajo práctico - 4° etapa

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <link rel="icon" href="assets/favicon.png" type="image/png" media="(prefers-color-scheme: light)">
   <link rel="icon" href="assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/ui-components.css">
+  <link rel="stylesheet" href="css/product-grid.css">
+  <link rel="stylesheet" href="css/navigation.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/cart.css">
 </head>
 <body>
   <header>
-    <nav>
-      <!-- Barra de navegación dinámica -->
-    </nav>
+    <nav></nav>
   </header>
 
   <div class="hero-container">
@@ -26,13 +29,18 @@
   </div>
 
   <main>
-    <section>
+    <section class="welcome-section">
       <h1>Bienvenido a AquaSwim</h1>
       <p>En nuestra tienda encontrarás todo lo que necesitas para disfrutar de la natación: trajes de baño, antiparras y gorras de la mejor calidad.</p>
     </section>
   </main>
+  
   <script src="js/site-structure.js"></script>
   <script src="js/navbar-component.js"></script>
   <script src="js/logoutRoot.js"></script>
+  <script src="js/api-service.js"></script>
+  <script src="js/cart-manager.js"></script>
+  <script src="js/home-products.js"></script>
+  <script src="js/footer-component.js"></script>
 </body>
 </html>
