--- a/pages/gorras.html
+++ b/pages/gorras.html
@@ -7,29 +7,31 @@
   <link rel="icon" href="../assets/favicon.png" type="image/png" media="(prefers-color-scheme: light)">
   <link rel="icon" href="../assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/cards.css">
+  <link rel="stylesheet" href="../css/ui-components.css">
+  <link rel="stylesheet" href="../css/product-grid.css">
+  <link rel="stylesheet" href="../css/navigation.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/cart.css">
 </head>
 <body>
   <header>
-    <nav>
-      <!-- Barra de navegación dinámica -->
-    </nav>
+    <nav></nav>
   </header>
   <main>
     <section>
-      <h1>Gorras</h1>
-      <p>Explora nuestra colección de gorras de natación, diseñadas para reducir la resistencia al agua y mantener tu cabello protegido.</p>
+      <h1>Gorras de Natación</h1>
+      <p>Gorras de silicona y lycra de alta calidad. Protege tu cabello y mejora tu hidrodinámica en el agua.</p>
       
-      <div class="cards-container">
-        <!-- Tarjetas de productos dinámicas -->
-      </div>
+      <div class="cards-container"></div>
     </section>
   </main>
   <script src="../js/site-structure.js"></script>
   <script src="../js/navbar-component.js"></script>
   <script src="js/logout.js"></script>
-  <script src="../js/product-data.js"></script>
+  <script src="../js/api-service.js"></script>
+  <script src="../js/cart-manager.js"></script>
   <script src="../js/dynamic-product-loader.js"></script>
   <script src="../js/product-card-interaction.js"></script>
+  <script src="../js/footer-component.js"></script>
 </body>
 </html> 
