--- a/pages/registro.html
+++ b/pages/registro.html
@@ -7,6 +7,8 @@
   <link rel="icon" href="../assets/favicon.png" type="image/png" media="(prefers-color-scheme: light)">
   <link rel="icon" href="../assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/ui-components.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/forms.css">
 </head>
 <body>
@@ -56,5 +58,6 @@
       </div>
     </section>
   </main>
+  <script src="../js/footer-component.js"></script>
 </body>
 </html> 
