Trabajo práctico - 5° etapa

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/navigation.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/cart.css">
+  <link rel="stylesheet" href="css/whatsapp-button.css">
 </head>
 <body>
   <header>
@@ -36,11 +37,13 @@
   </main>
   
   <script src="js/site-structure.js"></script>
+  <script src="js/session-manager.js"></script>
   <script src="js/navbar-component.js"></script>
   <script src="js/logoutRoot.js"></script>
   <script src="js/api-service.js"></script>
   <script src="js/cart-manager.js"></script>
   <script src="js/home-products.js"></script>
   <script src="js/footer-component.js"></script>
+  <script src="js/whatsapp-button.js"></script>
 </body>
 </html>
