--- a/pages/login.html
+++ b/pages/login.html
@@ -46,6 +46,7 @@
       </div>
     </section>
   </main>
+  <script src="../js/session-manager.js"></script>
   <script src="js/login.js"></script>
   <script src="../js/footer-component.js"></script>
 </body>
