--- a/pages/antiparras.html
+++ b/pages/antiparras.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../css/navigation.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/cart.css">
+  <link rel="stylesheet" href="../css/whatsapp-button.css">
 </head>
 <body>
   <header>
@@ -26,6 +27,7 @@
     </section>
   </main>
   <script src="../js/site-structure.js"></script>
+  <script src="../js/session-manager.js"></script>
   <script src="../js/navbar-component.js"></script>
   <script src="js/logout.js"></script>
   <script src="../js/api-service.js"></script>
@@ -33,5 +35,6 @@
   <script src="../js/dynamic-product-loader.js"></script>
   <script src="../js/product-card-interaction.js"></script>
   <script src="../js/footer-component.js"></script>
+  <script src="../js/whatsapp-button.js"></script>
 </body>
 </html> 
