--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trajes de Baño - AquaSwim</title>
+  <title>Carrito de Compras - AquaSwim</title>
   <link rel="icon" href="../assets/favicon.png" type="image/png" media="(prefers-color-scheme: light)">
   <link rel="icon" href="../assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/ui-components.css">
-  <link rel="stylesheet" href="../css/product-grid.css">
   <link rel="stylesheet" href="../css/navigation.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/cart.css">
@@ -19,21 +18,25 @@
     <nav></nav>
   </header>
   <main>
-    <section>
-      <h1>Trajes de Baño</h1>
-      <p>Explora nuestra colección de trajes de baño para hombres, mujeres y niños de las mejores marcas.</p>
+    <section class="cart-section">
+      <h1>Mi Carrito de Compras</h1>
       
-      <div class="cards-container"></div>
+      <div class="cart-container">
+        <div class="cart-items" id="cart-items">
+        </div>
+        
+        <div class="cart-summary" id="cart-summary">
+        </div>
+      </div>
     </section>
   </main>
+  
   <script src="../js/site-structure.js"></script>
   <script src="../js/session-manager.js"></script>
   <script src="../js/navbar-component.js"></script>
-  <script src="js/logout.js"></script>
   <script src="../js/api-service.js"></script>
   <script src="../js/cart-manager.js"></script>
-  <script src="../js/dynamic-product-loader.js"></script>
-  <script src="../js/product-card-interaction.js"></script>
+  <script src="js/cart-page.js"></script>
   <script src="../js/footer-component.js"></script>
   <script src="../js/whatsapp-button.js"></script>
 </body>
