--- a/pages/registro.html
+++ b/pages/registro.html
@@ -58,6 +58,7 @@
       </div>
     </section>
   </main>
+  <script src="../js/session-manager.js"></script>
   <script src="../js/footer-component.js"></script>
 </body>
 </html> 
